--- a/DOC/database/Views/ADC_BL_PAGE_ITEMS.html
+++ b/DOC/database/Views/ADC_BL_PAGE_ITEMS.html
@@ -8,9 +8,9 @@
 
 <body onload="NDLoader.OnLoad('Content');" class="NDPage NDContentPage">
 
-<a name="Topic807"></a><div class="CTopic TDatabaseView LSQL first">
+<a name="Topic864"></a><div class="CTopic TDatabaseView LSQL first">
  <div class="CTitle"><span class="Qualifier">Views.</span>&#8203;ADC_BL_PAGE_ITEMS</div>
- <div class="CBody"><div class="CHeading">Fields</div><table class="CDefinitionList"><tr><td class="CDLEntry">item_name</td><td class="CDLDefinition"><p>no comment available</p></td></tr><tr><td class="CDLEntry">item_id</td><td class="CDLDefinition"><p>no comment available</p></td></tr><tr><td class="CDLEntry">app_id</td><td class="CDLDefinition"><p>no comment available</p></td></tr><tr><td class="CDLEntry">page_id</td><td class="CDLDefinition"><p>no comment available</p></td></tr><tr><td class="CDLEntry">item_type</td><td class="CDLDefinition"><p>no comment available</p></td></tr></table></div>
+ <div class="CBody"><p>View to collect metadata from the APEX dictionary for all ADC supported kinds of page items</p><div class="CHeading">Fields</div><table class="CDefinitionList"><tr><td class="CDLEntry">item_name</td><td class="CDLDefinition"><p>Name of the page item, along with its translated item type</p></td></tr><tr><td class="CDLEntry">item_id</td><td class="CDLDefinition"><p>Static ID of the page item</p></td></tr><tr><td class="CDLEntry">app_id</td><td class="CDLDefinition"><p>APEX application ID</p></td></tr><tr><td class="CDLEntry">page_id</td><td class="CDLDefinition"><p>APEX application page ID</p></td></tr><tr><td class="CDLEntry">item_type</td><td class="CDLDefinition"><p>Type of the page ITEM</p></td></tr></table></div>
 </div>
 
 </body></html>
